[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deffe"
version = "4.0.0"
authors = [
  { name="Narasinga Rao Miniskar", email="miniskarnr@ornl.gov" },
  { name="Aaron Young", email="youngar@ornl.gov" },
  { name="Frank Liu", email="liufy@ornl.gov" },
  { name="Seth Hitefield", email="hitefieldsd@ornl.gov" },
  { name="Jeffrey Vetter", email="vetter@ornl.gov" },
]
description = "Deffe data-efficient design space exploration framework."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "keras",
  "tensorflow",
  "torch",
  "doepy",
  "scikit-learn ",
  "xlsxwriter",
  "matplotlib",
  "pandas",
  "pathlib",
  "pydot",
  "tqdm",
  "torchsummary",
  "jsoncomment",
  "commentjson",
  "sphinx_rtd_theme",
  "myst_parser",
]

[project.optional-dependencies]
dev-tools = [
   "black",
]

[project.urls]
Homepage = "https://code.ornl.gov/miniskarnr/deffe"
Issues = "https://code.ornl.gov/miniskarnr/deffe/-/issues"

[project.scripts]
run_deffe = "deffe.framework.run_deffe:main"

[tool.hatch.build.targets.wheel]
packages = ["framework"]

[tool.hatch.build.targets.wheel.sources]
"framework" = "deffe/framework"

